# outpost_hd_rs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.md  OPHD.sln  README.md
data/: StructureTypes.xml  factory_products.xml  tech0-1.xml
data/music/: credits.txt
data/planets/: PlanetAttributes.xml
data/robots/: robodigger.sprite  robodozer.sprite  robominer.sprite
data/shaders/: noise.frag  noise.vert
data/structures/: agridome.sprite  air_shaft.sprite  chap.sprite  command_center.sprite  commercial.sprite  communications_tower.sprite  construction_01.sprite  factory_surface.sprite  factory_underground.sprite  fusion_reactor.sprite  labo_surface.sprite  laboratory_underground.sprite  lander_0.sprite  lander_1.sprite  maintenance.sprite  medical.sprite  mine_facility.sprite  mine_shaft.sprite  nursery_01.sprite  park.sprite  police_surface.sprite  police_underground.sprite  recreation_center.sprite  recycling.sprite  red_light_district.sprite  residential_1.sprite  roads.sprite  (+10 more)
src/: agridome.h  agridome.rs  airshaft.h  airshaft.rs  airshaft_h.rs  animation_set.cpp  animation_set.h  animation_set.rs  animation_set_h.rs  app_context.rs  button.cpp  button.h  cache.h  cache_h.rs  cargolander.h  chap.h  chap_h.rs  cheatmenu.cpp  cheatmenu.h  cheatmenu_cpp.rs  cheatmenu_h.rs  checkbox.cpp  checkbox.h  checkbox_h.rs  colonistlander.h  colonistlander_h.rs  color.cpp  color.rs  color_h.rs  combobox.cpp  combobox.h  combobox_cpp.rs  combobox_h.rs  commandcenter.h  commandcenter_h.rs  commercial.h  common.cpp  common.h  common.rs  commtower.h  (+472 more)
(+76 files in other folders)
